<resources>
    <string name="app_name">AiMăm</string>
    <string name="app_version">App version</string>
    <string name="app_license">License</string>
    <string name="copy_right">Copyright © GMO-Z.com RUNSYSTEM, All rights reserved</string>
    <string name="google_map_key">AIzaSyCx_oe-fsPElPH6WwlHRKbOYHfaUmNURdE</string>
    <string name="facebook_app_id">1385451191571579</string>
    <string name="fb_login_protocol_scheme">fb1385451191571579</string>
    <string name="login_as_difference_fb_acc_error">User logged in as different Facebook user</string>
    <string name="login_as_difference_fb_acc_message">You have logged in by difference Facebook account \nDo
        you want continue log in as current Facebook account ?</string>
    <string name="can_not_get_url_to_share">Can not get image to share</string>
    <string name="instagram_client_id">c3e8ee2d87a6434e92314b11d054d950</string>
    <string name="instagram_client_secret">c25a643ec4d74188a1448478f43b199a</string>
    <string name="instagram_callback_url">http://aimam.vn/</string>
    <string name="instagram_not_install_mess">To use this function your device must have Instagram \nDo
        you want to install Instagram ?</string>
    <string name="ad_banner">ca-app-pub-7251193056782448/7834640763</string>
    <string name="ad_interstitial_full_screen">ca-app-pub-7251193056782448/2136070459</string>
    <string name="request_permission_mess">To use this function you need allow access to Storage</string>
    <string name="title_user_login">User Login</string>
    <string name="title_login">Login</string>
    <string name="title_text_login">Or you can login with one of the following</string>
    <string name="title_text_create_account">Don‘t have an account ?</string>
    <string name="title_text_register_now">REGISTER NOW</string>
    <string name="title_sign_up">Create Account</string>
    <string name="title_edit_pf">Edit Profile</string>
    <string name="title_pf_screen">Profile</string>
    <string name="title_nearby">Nearest Shop</string>
    <string name="title_restaurant">Restaurant</string>
    <string name="title_search">Search shops</string>
    <string name="title_upload_photo">Upload Photos</string>
    <string name="title_photo_library">Photos Library</string>
    <string name="title_message_list">Message</string>
    <string name="title_no">No</string>
    <string name="title_yes">Yes</string>
    <string name="title_repair">Repair</string>
    <string name="no_connect_internet">We need internet to connect server. Please check your device\'s connection.</string>
    <string name="nav_edit_profile">Edit profile</string>
    <string name="nav_coupon">Coupon</string>
    <string name="nav_message">Message</string>
    <string name="nav_invite">Invite friends</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_about">About AiMăm</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_hotline">HOTLINE: 024.3772.4304</string>
    <string name="nav_email">Email: aimam@runsystem.biz</string>
    <string name="txt_email">Email</string>
    <string name="txt_fb">Facebook</string>
    <string name="txt_instagram">Instagram</string>
    <string name="txt_setting_notify">Push - notifications</string>
    <string name="txt_setting_feedback">Feedback</string>
    <string name="txt_send">Send</string>
    <string name="txt_get_code">Get Code</string>
    <string name="txt_view">View : </string>
    <string name="txt_like">Like : </string>
    <string name="txt_subscribe">Subs : </string>
    <string name="txt_special_food">Special Food or Drinks</string>
    <string name="txt_new_food">New Food or Drinks</string>
    <string name="txt_contact_us">Contact Us</string>
    <string name="txt_coupon_list">Coupon</string>
    <string name="txt_is_food">Is this the food(drink) name</string>
    <string name="txt_hint_upload">Whats in your mind</string>
    <string name="edit_pf_changephoto">Change profile photo</string>
    <string name="edt_hint_name">Full Name</string>
    <string name="edt_hint_web">Website</string>
    <string name="edt_hint_birthday">Birthday</string>
    <string name="edt_hint_gender">Gender</string>
    <string name="edt_hint_address">Address</string>
    <string name="edt_hint_work">Work</string>
    <string name="edt_hint_intro">Intro</string>
    <string name="edt_hint_phone">Phone number…</string>
    <string name="edt_hint_title">Message Title…</string>
    <string name="edt_hint_messege">Message content…</string>
    <string name="edt_hint_review">Review content…</string>
    <string name="edt_hint_email">Email</string>
    <string name="edt_hint_pass">Password</string>
    <string name="tv_hashtag_title">Hashtag list</string>
    <string name="title_hot">Hot</string>
    <string name="title_menu">Menu</string>
    <string name="title_about">About</string>
    <string name="title_review">Review</string>
    <string name="title_stamp">Stamp</string>
    <string name="title_address">Address</string>
    <string name="title_open">Opening</string>
    <string name="title_hours">Hours</string>
    <string name="title_website">Website</string>
    <string name="title_phone">Phone</string>
    <string name="title_email">Email</string>
    <string name="title_send">Send</string>
    <string name="title_shop_suggestion">Best matching</string>
    <string name="title_shop_ads">Recently hottest</string>
    <string name="title_favorite_item">Top must-try</string>
    <string name="title_number_of_stamps">Number of stamp: </string>
    <string name="title_unsubscribe">Unsubscribe</string>
    <string name="title_subscribe">Subscribe</string>
    <string name="title_useful">Useful : </string>
    <string name="title_un_useful">Unuseful : </string>
    <string name="title_photo">Photo Library</string>
    <string name="title_del">Delete</string>
    <string name="title_upload">Upload</string>
    <string name="title_select">Select</string>
    <string name="title_name">Name</string>
    <string name="title_password">Password</string>
    <string name="title_confirm">Confirm password</string>
    <string name="title_continue">Continue</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_like">Like Now</string>
    <string name="title_register_fail">Register Fail : </string>
    <string name="title_comment">Comments (%1$d)</string>
    <string name="title_new_feed">News Feed</string>
    <string name="title_check_in">Check in</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="error_mess_username">* Please enter username from 4 to 100 characters</string>
    <string name="error_mess_email">* Please enter a valid email address. \nFor example : support@baristagram.com</string>
    <string name="error_mess_pass">* Please enter password from 8 to 32 characters</string>
    <string name="error_mess_pass_not_incorrect">* Password and Confirm password is not match !</string>
    <string name="input_error_content">* Invalid Input content.Please try again !</string>
    <string name="text_feedback_success">Your feedback has been successfully !</string>
    <string name="text_contact_success">Your message has been successfully !</string>
    <string name="text_success_invite">Your invite has been successfully !</string>
    <string name="text_success_favorite">You like has been successfully !</string>
    <string name="text_success_upload">Upload Success</string>
    <string name="error">Error</string>
    <string name="not_have_data">Not found data</string>
    <string name="not_user_cm">This is not your comment</string>
    <string name="change_rv">Change comment ?</string>
    <string name="ask_ser_edt_rv">Do you want to update or delete review</string>
    <string name="expiry_date">Valid used to date : </string>
    <string name="comfirm_exit_text">Do you want to exit ?</string>
    <string name="comfirm_logout_text">Do you want to Logout ?</string>
    <string name="subscribe_success">Subscribe shop is successfully !</string>
    <string name="un_subscribe_success">Unsubscribe shop is successfully !</string>
    <string name="gps_enabled">This app need your location . Please enabled GPS !</string>
    <string name="gps_setting">Do you want to go to settings menu?</string>
    <string name="setting">Setting</string>
    <string name="take_photo_success">The photo has been saved to photo library successful!</string>
    <string name="take_photo_more">Do you want to continue take more photos ?</string>
    <string name="del_message_success">Delete Message Successfully !</string>
    <string name="select_one_image">Please select at least one image</string>
    <string name="select_five_image">You can upload only 5 images</string>
    <string name="warning">Warning</string>
    <string name="dialog_must_have_read_permission">You must grant READ PERMISSION to use this feature</string>
    <string name="edit_pf_name_have_regex">* Please input less than 100 character.\nOnly letter and number are accepted.</string>
    <string name="contact_us_phone_error">* The phone number should be 10 or 11 numbers. You could let\'s it empty</string>
    <string name="contact_us_title_error">* Title must be from 4 to 100 Character</string>
    <string name="contact_us_content_error">* The max content is 400 character and must not be empty</string>
    <string name="call_now">Call now</string>
    <string name="error_time_out">Server connection has some problem. Please check your connection !</string>
    <string name="list_no_data">There is no data to display.</string>
    <string name="prepare_menu">Preparing menu.</string>
    <string name="camera">Camera</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="this_shop_don_t_have_stamp_list">This shop don\'t have stamp list</string>
    <string name="empty_stamp">You can\'t check in. This shop don\'t have stamp list</string>
    <string name="about_title">"About "</string>
    <string name="no_address">No Address</string>
    <string name="no_menu_items">Shop doesn\'t have menu</string>
    <string name="not_found_result">We couldn\'t find anything for :</string>
    <string name="tv_uploaded_img">Uploaded Image</string>
    <string name="text_post">posts</string>
    <string name="text_useful">useful</string>
    <string name="text_skip">Skip</string>
    <string name="take_coupon_success">Take coupon code successfully !</string>
    <string name="text_tut_green_1">Trí tuệ nhân tạo</string>
    <string name="text_tut_green_2">Trí tuệ nhân tạo</string>
    <string name="text_tut_green_3">Ăn chơi thả ga</string>
    <string name="text_tut_green_4">AI MĂM NGAY NÀO</string>
    <string name="text_tut_white_1">Sẽ chỉ lối cho bạn đến mọi chốn ăn chơi\nchỉ bằng một nút bấm</string>
    <string name="text_tut_white_2">Gợi ý chuẩn không cần chỉnh\ncác quán xá đúng sở thích người dùng</string>
    <string name="text_tut_white_3">Chẳng lo về giá vì đã có\nkho phiếu giảm giá nhiều vô biên</string>
    <string name="text_tut_white_4">Còn chần chờ gì nữa</string>
    <string name="load_data_nearby">Loading Data.Please wait</string>
    <string name="title_stamp_ask">Do you want to receive this present?</string>
    <string name="title_stamp_ask_not_enough">You can receive this present when you reach this point</string>
    <string name="title_check_in_success">Check in successfully !</string>
    <string name="error_server">Server has some problem. Please try again !</string>
    <string name="message_error_code_500">Internal Server Error. Please try again !</string>
    <string name="message_error_code_401">Authentication failed. Please try again !</string>
    <string name="message_error_code_404">Your request is not found. Please try again !</string>
</resources>